<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/z_toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:navigationIcon="@drawable/ic_chevron_left_black_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/z_edit_phone_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:hint="@string/phone"
        android:inputType="number"
        android:maxLength="11" />

    <EditText
        android:id="@+id/z_edit_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="16" />

    <Button
        android:id="@+id/z_btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/z_txt_findPsw_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:padding="5dp"
        android:text="@string/forgot_your_password" />

</LinearLayout>
